--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 services:
+  # MySQL
   mysql:
     image: mysql:8.0
     container_name: mysql_server
@@ -11,6 +12,8 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
       - ./dump_20250820.sql:/docker-entrypoint-initdb.d/dump_20250820.sql
+    networks:
+      - backend_net
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -21,7 +24,10 @@ services:
       PMA_PORT: 3306
     ports:
       - "8090:80"
+    networks:
+      - backend_net
 
+  # MSSQL
   mssql:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: mssql_server
@@ -33,6 +39,8 @@ services:
       - "1433:1433"
     volumes:
       - mssql_data:/var/opt/mssql
+    networks:
+      - backend_net
 
   mssql-init:
     image: mcr.microsoft.com/mssql-tools
@@ -44,14 +52,20 @@ services:
     entrypoint: /bin/bash
     command: -c "until /opt/mssql-tools/bin/sqlcmd -S mssql -U sa -P 'Evpe_123456' -Q 'SELECT 1' >/dev/null 2>&1; do echo 'waiting mssql...'; sleep 1; done; /opt/mssql-tools/bin/sqlcmd -S mssql -U sa -P 'Evpe_123456' -i /init_dbo.sql"
     restart: "no"
+    networks:
+      - backend_net
 
+  # Adminer
   adminer:
     image: adminer
     container_name: adminer
     restart: always
     ports:
       - "8080:8080"
+    networks:
+      - backend_net
 
+  # RabbitMQ
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
@@ -62,7 +76,16 @@ services:
     ports:
       - "5672:5672"   # AMQP
       - "15672:15672" # Web UI
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    networks:
+      - backend_net
 
 volumes:
   mysql_data:
   mssql_data:
+  rabbitmq_data:
+
+networks:
+  backend_net:
+    driver: bridge
