--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,38 +27,6 @@ services:
     networks:
       - backend_net
 
-  # MSSQL
-  mssql:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: mssql_server
-    restart: always
-    profiles:
-      - mssql
-    environment:
-      ACCEPT_EULA: "Y"
-      MSSQL_SA_PASSWORD: "Evpe_123456"
-    ports:
-      - "1433:1433"
-    volumes:
-      - mssql_data:/var/opt/mssql
-    networks:
-      - backend_net
-
-  mssql-init:
-    image: mcr.microsoft.com/mssql-tools
-    container_name: mssql_init_runner
-    depends_on:
-      - mssql
-    profiles:
-      - mssql
-    volumes:
-      - ./init_dbo.sql:/init_dbo.sql:ro
-    entrypoint: /bin/bash
-    command: -c "until /opt/mssql-tools/bin/sqlcmd -S mssql -U sa -P 'Evpe_123456' -Q 'SELECT 1' >/dev/null 2>&1; do echo 'waiting mssql...'; sleep 1; done; /opt/mssql-tools/bin/sqlcmd -S mssql -U sa -P 'Evpe_123456' -i /init_dbo.sql"
-    restart: "no"
-    networks:
-      - backend_net
-
   # RabbitMQ
   rabbitmq:
     image: rabbitmq:3-management
@@ -75,10 +43,29 @@ services:
     networks:
       - backend_net
 
+  # Caddy reverse proxy
+  caddy:
+    image: caddy:2
+    container_name: caddy
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy_data:/data
+      - caddy_config:/config
+    networks:
+      - backend_net
+    depends_on:
+      - phpmyadmin
+      - rabbitmq
+
 volumes:
   mysql_data:
-  mssql_data:
   rabbitmq_data:
+  caddy_data:
+  caddy_config:
 
 networks:
   backend_net:
